--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </head>
 <body>
   <div class="text">
-    <b>i love everything about u</b>
+    <b>i love convient</b>
     <button class="next-button" onclick="navigateToNextPage()">Next</button>
   </div>
   <div class="logo">
